# gatey-sdk-py

./: LICENSE  README.md  catch_exception.py  print_exception_event.py  pyproject.toml  resolve_exception_to_params.py  setup.py  test_catch_exception.py
.github/workflows/: linters.yml
docs/source/: conf.py  index.rst
examples/: auth.py  buffer_events_for_bulk_sending.py  capture_exception.py  capture_message.py  capture_raw_event.py  catch_exception.py  change_api_provider_settings.py  custom_api_provider.py  do_soft_auth_check.py  get_server_time.py  manual_user_oauth.py  print_source_context.py  print_transport.py
examples/integrations/: flask_integration.py  starlette_integration.py
gatey_sdk/: __init__.py  __version__.py  api.py  auth.py  buffer.py  client.py  consts.py  exceptions.py  platform.py  response.py  transport.py  utils.py
gatey_sdk/integrations/: __init__.py  django.py  flask.py  starlette.py
gatey_sdk/internal/: __init__.py  exc.py  source.py  traceback.py
gatey_sdk/transports/: __init__.py  base.py  func.py  http.py  print.py  void.py
tests/: test_auth.py  test_catch_exception.py  test_custom_api_provider.py  test_get_server_time.py  test_resolve_exception_to_params.py
