[tool.poetry]
name = "gatey-sdk"
version = "0.0.6"
description = "Python client for Gatey (https://gatey.florgon.space)"
authors = ["Florgon Team and Contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
